--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
   <body>
     <h1>Git & GitHub Crash Course</h1>
     <p>Because the basics are important!</p>
+    <p>Learn more about GIT at <a href="https://git-scm.com/book/en/v2">the officla website</a></p>
   </body>
 </html>
